fix aos offset gap

--- a/source/stylesheets/application.css.scss
+++ b/source/stylesheets/application.css.scss
@@ -18,8 +18,7 @@
 html body {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
- background-image: url(../images/body_bg2.jpg);
+  background-image: url(../images/body_bg2.jpg);
 }
 
 section {
@@ -36,6 +35,8 @@ p {
 }
 
 *, *:before, *:after {
+  margin: 0;
+  padding: 0;
   box-sizing: inherit;
 }
 
