--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 /* Main navbar */
 .navbar-name {
-  position: fixed;
+  position: fixed !important;
   top: 0;
   left: 0;
   display: flex;
@@ -9,7 +9,7 @@
   z-index: 100;
   background: $navbar-gradient;
   height: 90px;
-  width: 100%;
+  width: 100vw;
   box-shadow: 1px 1px 2px 1px rgba(0,0,0, 0.5);
   transition: all ease-in-out 700ms;
 }
