--- a/source/stylesheets/pages/garden.scss
+++ b/source/stylesheets/pages/garden.scss
@@ -48,6 +48,10 @@
   box-shadow: black 1px 1px 2px 1px;
 }
 
+#barre3 {
+  width: 100%;
+}
+
 @media only screen and (max-width: 720px) {
   .aered {
     padding: 10px 5px;
