--- a/source/stylesheets/pages/home.scss
+++ b/source/stylesheets/pages/home.scss
@@ -4,17 +4,14 @@
   background-size: cover;
   background-position: 0 0;
   background-repeat: no-repeat;
-  height: 100vh;
-  width: 100%;
+  height: 110vh;
   margin-top: 20px;
-  padding-top: 100px;
   z-index: 20;
 }
 
 .text-part {
   width: 90%;
   margin: 20px auto;
-  padding: 20px 8px;
   border-radius: 4px;
   padding: 30px 20px;
 }
@@ -36,31 +33,12 @@
   background-position: 0 0;
   background-repeat: no-repeat;
   height: 90vh;
-  width: 100%;
   margin-top: 20px;
   padding-top: 100px;
 }
 
 .myown {
   box-shadow: black 1px 1px 2px 1px;
-}
-
-#babyfoot {
-  float: left;
-  border-radius: 50%;
-  margin: 10px;
-}
-
-#planches {
-  float: right;
-  border-radius: 50%;
-  margin: 10px;
-}
-
-#billard {
-  float: right;
-  border-radius: 50%;
-  margin: 10px;
 }
 
 .sec-pos3 {
